--- a/templates/upload.html
+++ b/templates/upload.html
@@ -5,7 +5,7 @@
 <title>Upload</title>
 </head>
 <body>
-        <form action ="{/sendFile}" method="POST" enctype="multipart/form-data">
+        <form action ="/sendFile" method="POST" enctype="multipart/form-data">
             <input type = "file" name="file"/><br>
             <input type = "submit"/>
         </form>
